# eindir

./: .buildinfo  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  changelog.html  dist-workspace.toml  environment.yml  genindex.html  index.html  meson.build  meson_options.txt  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js  tbump.toml  towncrier.toml
.doctrees/: changelog.doctree  environment.pickle  index.doctree
.doctrees/apidocs/: index.doctree
.doctrees/apidocs/eindir/: eindir.core.components.doctree  eindir.core.doctree  eindir.core.exceptions.doctree  eindir.doctree  eindir.viz.doctree  eindir.viz.viz2d.doctree
.github/workflows/: build_docs.yml  build_test.yml  ci.yml  docs-deploy.yml  release.yml
_sources/apidocs/: index.rst.txt
_sources/apidocs/eindir/: eindir.core.components.md.txt  eindir.core.exceptions.md.txt  eindir.core.md.txt  eindir.md.txt  eindir.viz.md.txt  eindir.viz.viz2d.md.txt
apidocs/: index.html
apidocs/eindir/: eindir.core.components.html  eindir.core.exceptions.html  eindir.core.html  eindir.html  eindir.viz.html  eindir.viz.viz2d.html
docs/orgmode/: architecture.org  bindings.org  changelog.org  contributing.org  faq.org  index.org  spec.org  tutorials.org
docs/source/: conf.py  index.md
eindir/: components.py
eindir/core/: components.py
eindir/lib/: __init__.py
eindir/viz/: viz2d.py
include/: eindir-core.hpp
pytest/: test_array_api.py  test_fpair.py  test_py_objective.py  test_tvm_ffi.py
python/eindir/: __init__.py
python/eindir/core/: __init__.py  array_api.py  tvm_ffi.py
src/: bounds.rs  error.rs  ffi.rs  fpair.rs  lib.rs  objective.rs  py_objective.rs  python.rs  types.rs
src/objectives/: ackley.rs  mod.rs  rastrigin.rs  rosenbrock.rs  styblinski_tang.rs
tests/: bounds_proptest.rs  ffi_smoke.c  objectives.rs  test_numlimit.py  test_objectivefunction.py
