[package]
name = "eindir-core"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Typed primitives for ND objective functions and bounded sampling."
repository = "https://github.com/HaoZeke/eindir"
categories = ["science", "mathematics"]
keywords = ["optimization", "objective-function", "sampling"]

[lib]
name = "eindir_core"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
capi = []
python = ["dep:pyo3", "dep:numpy", "dlpk/pyo3"]

[dependencies]
thiserror = "2"
ndarray   = "0.17"
dlpk      = { git = "https://github.com/metatensor/dlpk.git", tag = "v0.1.5", features = ["ndarray", "half"] }
pyo3      = { version = "0.26", features = ["extension-module"], optional = true }
numpy     = { version = "0.26", optional = true }
num-traits  = "0.2"
rand        = "0.9"
rand_distr  = "0.5"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
proptest  = "1"

[build-dependencies]
cbindgen = "0.29"

[package.metadata.capi]
min_version = "0.10.17"

[package.metadata.capi.header]
name         = "eindir-core.h"
subdirectory = ""
generation   = true
enabled      = true

[package.metadata.capi.pkg_config]
name        = "eindir-core"
filename    = "eindir-core"
description = "ND objective function and sampling primitives"

[package.metadata.capi.library]
name = "eindir_core"

[package.metadata.capi.install.include]
asset = [{ from = "include/eindir-core.hpp", to = "." }]

[profile.dist]
inherits = "release"
lto      = "thin"
