[project]
name = "eindir"
description = "A set of \"particles\" or components mainly focused on working with functions in ND."
authors = [
    { name="Rohit Goswami", email="rgoswami@ieee.org" },
    { name="Ruhila S", email="ruhila@ieee.org" },
    { name="Amrita Goswami", email="amrita@hi.is" },
    { name="Sonaly Goswami", email="sonaly@iitk.ac.in" },
    { name="Debabrata Goswami", email="dgoswami@iitk.ac.in" },
]
maintainers = [
    { name="Rohit Goswami", email="rgoswami@ieee.org" },
    { name="Ruhila S", email="ruhila@ieee.org" },
    { name="Amrita Goswami", email="amrita@hi.is" },
]
dependencies = []
requires-python = ">=3.10.1"
readme = "README.md"
license = {text = "MIT"}
dynamic = [ "version" ]

keywords = ["library", "tools", "structures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "_version.py"

[project.optional-dependencies]
plotter = [
    "matplotlib>=3.8.3",
    "cmcrameri>=1.8",
]
testing = [
    "pytest>=8.0.0",
    "pytest-datadir>=1.5.0",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.2.1",
]
docs = [
    "sphinx>=6.1.3",
]

[tool.pdm.scripts]
check_ruff  = "ruff ."
ruff_fix    = "ruff --fix ."
ruff_format = "ruff format ."
lint        = { composite = [ "ruff_fix", "ruff_format" ] }
test        = "pytest --cov=eindir tests"

[project.urls]
"Homepage" = "https://github.com/HaoZeke/eindir"
"Bug Tracker" = "https://github.com/HaoZeke/eindir/issues"

[project.scripts]
eindir = "eindir.cli.main:hello"
