[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "eindir"
description = "A set of \"particles\" or components mainly focused on working with functions in ND."
authors = [
    { name = "Rohit Goswami",   email = "rgoswami@ieee.org" },
    { name = "Ruhila S",         email = "ruhila@ieee.org" },
    { name = "Amrita Goswami",   email = "amrita@hi.is" },
    { name = "Sonaly Goswami",   email = "sonaly@iitk.ac.in" },
    { name = "Debabrata Goswami", email = "dgoswami@iitk.ac.in" },
]
maintainers = [
    { name = "Rohit Goswami", email = "rgoswami@ieee.org" },
    { name = "Ruhila S",       email = "ruhila@ieee.org" },
    { name = "Amrita Goswami", email = "amrita@hi.is" },
]
version = "0.3.0"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["library", "tools", "structures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
]

[project.optional-dependencies]
plotter = [
    "matplotlib>=3.8.3",
    "cmcrameri>=1.8",
]
testing = [
    "pytest>=8",
    "pytest-cov>=4.1",
]

[project.urls]
"Homepage"   = "https://github.com/HaoZeke/eindir"
"Bug Tracker" = "https://github.com/HaoZeke/eindir/issues"

[tool.maturin]
features      = ["python"]
module-name   = "eindir._core"
python-source = "python"
